# sample-agentic-data-lineage

./: .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  README.md  SECURITY_SETUP.md  THREAT_MODEL.md  pyproject.toml
.github/workflows/: ci.yml
dbt-redshift-openlineage/: .env.template  .gitignore  README.md  README_optimizer.md  pyproject.toml  run_dbt_with_sync.sh
dbt-redshift-openlineage/dbt_redshift_openlineage/: .user.yml  README.md  dbt_project.yml  profiles.yml.template
dbt-redshift-openlineage/dbt_redshift_openlineage/models/mart/: customers.sql  orders.sql  schema.yml
dbt-redshift-openlineage/dbt_redshift_openlineage/models/staging/: schema.yml  stg_customers.sql  stg_orders.sql  stg_payments.sql
dbt-redshift-openlineage/marquez_lineage/: marquez_config.yaml  marquez_lineage_sync.py  marquez_lineage_sync.py.bk  marquez_optimizer.py
glue-openlineage/: .gitignore  README.md  pyproject.toml
glue-openlineage/iac-612674025488-us-west-2/: README.md  glue-database.tf  glue-dependent-libs-s3.tf  glue-job.tf  glue-roles.tf  glue-vpc-connection.tf  main.tf  output.tf  providers.tf  redshift-spectrum-role.tf
lakehouse-core/: .gitignore  LICENSE  README.md  pyproject.toml
lakehouse-core/iac-612674025488-us-west-2/: README.md  bastion.tf  generate_tfvars.sh  main.tf  marquez-pod-identity.tf  marquez.tf  output.tf  providers.tf  terraform.tfvars.example  variables.tf
lakehouse-core/iac-612674025488-us-west-2/iam/: AWSLoadBalancerController.json
lakehouse-core/iac-612674025488-us-west-2/karpenter-node/common/: common-ec2nodeclass.yaml  common-nodepool.yaml
lakehouse-core/iac-612674025488-us-west-2/marquez-manifest/: cfm-marquez-agent.yaml  ingress-marquez-agent.yaml  ingress-marquez-mcp.yaml  ingress-marquez-web.yaml  ingress-marquez.yaml  marquez-agent.yaml  marquez-mcp.yaml  svc-marquez-agent.yaml  svc-marquez-mcp.yaml
lakehouse-core/iac-612674025488-us-west-2/modules/eks-addons/: README.md  helm-addon.tf  karpenter-k8s.tf  outputs.tf  variables.tf  versions.tf
lakehouse-core/iac-612674025488-us-west-2/modules/eks-karpenter/: README.md  eks.tf  karpenter.tf  outputs.tf  variables.tf  versions.tf
lakehouse-core/iac-612674025488-us-west-2/modules/rds-aurora-mysql/: README.md  main.tf  outputs.tf  variables.tf
lakehouse-core/iac-612674025488-us-west-2/modules/rds-aurora-postgresql/: README.md  main.tf  outputs.tf  variables.tf
lakehouse-core/iac-612674025488-us-west-2/modules/redshift/: README.md  main.tf  outputs.tf  variables.tf
lakehouse-core/iac-612674025488-us-west-2/modules/vpc/: README.md  endpoints.tf  main.tf  outputs.tf  variables.tf
lakehouse-core/script/: clean_env.sh  cost_analyzer.py  get_credencials_of_deploy_role.sh
lakehouse-core/test/: test-pod.yaml
marquez-agents/: .dockerignore  .gitignore  Dockerfile  README.md  build-and-deploy-private.sh  build-and-deploy.sh  diagnose_system.py  pyproject.toml  run_console.py  run_streamlit.py  test_redshift_connection.py
marquez-agents/.streamlit/: config.toml
marquez-agents/config/: .secrets.toml.template  settings.development.toml  settings.local.toml  settings.toml
marquez-agents/src/: config.py  main.py  multi_agent_system_v2_backup.py  streamlit_app_wrapper.py
marquez-agents/src/agents/: __init__.py  agent_factory.py
marquez-agents/src/agents/prompts/: __init__.py  datacatalog_agent.py  lineage_agent.py  metadata_agent.py  orchestrator_agent.py  specialist_agent.py
marquez-agents/src/core/: multi_agent_system.py
marquez-agents/src/i18n/: __init__.py  translator.py
marquez-agents/src/i18n/translations/: en.json  zh.json
marquez-agents/src/ui/: interface_manager.py  streamlit_ui.py
marquez-agents/src/utils/: config_validator.py  datacatalog_tools.py  glue_connector.py  language_manager.py  redshift_connector.py  streamlit_context.py  time_tools.py  warning_suppressor.py
marquez-mcp/: .dockerignore  Dockerfile  README.md  build-and-deploy-private.sh  build-and-deploy.sh  client-http.py  client-stdio.py  marquez-mcp.yaml  pyproject.toml  server.py  settings.py  settings.toml
redshift-enternal-tables-auto-creation/: README.md  config.yaml  env copy.template  env.template  glue_redshift_lineage_converter.py  marquez_job_manager.py  pyproject.toml
(+3 files in other folders)
