[project]
name = "dbt-redshift-openlineage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "dbt-colibri>=0.2.5",
    "dbt-core>=1.10.10",
    "dbt-redshift>=1.9.5",
    "requests>=2.32.5",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["dbt_redshift_openlineage*", "marquez_lineage*"]
