[project]
name = "lakehouse-core"
version = "0.1.0"
description = "Data lakehouse integration core project"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.41",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "seaborn>=0.13.2",
]
