[project]
name = "redshift-enternal-tables-auto-creation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.21",
    "structlog>=25.4.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "pyyaml>=6.0.0",
    "pre-commit>=4.3.0",
]
